# automagik-hive

./: .aidigestignore  .coverage.Mac.lan.46094.XeFgaTmx  .coverage.Mac.lan.46426.XCgawcix  .coverage.Mac.lan.46445.XTROPWOx  .coverage.Mac.lan.46645.XCTIBOZx  .coverage.MacBook-Pro-de-Caio-2.local.10071.XpCswJBx  .coverage.MacBook-Pro-de-Caio-2.local.23297.XjGaxhXx  .coverage.MacBook-Pro-de-Caio-2.local.37547.XNcoXRzx  .coverage.MacBook-Pro-de-Caio-2.local.39187.XQngWNtx  .coverage.MacBook-Pro-de-Caio-2.local.42852.XYHJlGLx  .coverage.MacBook-Pro-de-Caio-2.local.79201.XthjVzCx  .coverage.NMSTX-WORKSTATION.307402.XvumMEtx  .dockerignore  .env.agent.template  .env.core  .env.example  .env.genie  .env.genie.template  .env.production  .env.staging  .env.workspace  .envrc  .gitignore  .mcp.json  .mcp.json.example  :APPDATAwarpWarpdatalaunch_configurations  =2.0.0  AGENTS.md  AGNO_PROXY_SYSTEM.md  ANA_CUSTOM_PARAMETERS_INVESTIGATION.md  ANA_TEAM_CONFIG_ANALYSIS.md  ARCHITECTURE_CURRENT.md  AUDIT_INDEX.md  AUTHENTICATION.md  CLAUDE.md  CLAUDE.md.template  CLAUDE_UNIFIED.md  CLEANUP_REPORT.md  CSV_METADATA_SOLUTION.md  DATABASE_ARCHITECTURE.md  (+147 more)
.claude/: claude-cli-wrapper.sh  debug-wrapper.sh  settings.json  settings.json.backup  settings.local.json  tdd-guard-claude-wrapper.sh  tdd-guard-wrapper.sh  tdd_hook.py  tdd_hook.sh  tdd_validator.py
.genie/: FINAL_TEST_OBLITERATION_REPORT.md  TESTING_SUMMARY.md  TEST_ANALYSIS_INDEX.md  TEST_COVERAGE_GAP_ANALYSIS.md  TEST_COVERAGE_MATRIX.md  TEST_OBLITERATION_SUMMARY.md  TEST_SUITE_CATALOG.md  test_cleanup_checklist.md  test_examples_of_problems.md  test_quality_analysis.md  tests_quick_reference.md  tests_structure_mapping.md
.github/: .release-please-manifest.json  PYPI_PUBLISHING.md  RELEASE_AUTOMATION.md  RELEASE_CONTROLLED.md  release-please-config.json
agent-ui/: .mcp.json  CLAUDE.md  package-lock.json  package.json  tailwind.config.ts
agents/: CLAUDE.md  __init__.py  registry.py  version_factory.py
ai/: .mcp.json  CLAUDE.md  __init__.py
alembic/: env.py
api/: CLAUDE.md  main.py  playground.py  serve.py  settings.py  streaming_patch.py  test_serve.py
automagik-store/: .env.example  .gitignore  .mcp.json  README.md
bench/: QUICKSTART.md  README.md  __init__.py
chat/: package-lock.json  package.json
cli/: __init__.py  benchmark.py  docker_manager.py  main.py  profiler.py  utils.py  workspace.py
common/: notifications.py  startup_display.py  startup_notifications.py  version_factory.py
config/: CLAUDE.md  __init__.py  models.py  postgres_config.py  sample-agent-complete.yaml  settings.py
core/: __init__.py
data/: README.md  escalation_patterns.db  performance_benchmark_quick_mock_20250716_095058.json  performance_benchmark_quick_mock_20250716_095625.json  performance_report_quick_mock_20250716_095058.md  performance_report_quick_mock_20250716_095625.md  performance_report_unified_mock_20250716_101132.md  performance_results_unified_mock_20250716_101132.json  test_patterns_demo.db  tickets.json
db/: CLAUDE.md  __init__.py  alembic.ini  session.py  settings.py
docker/: README.md
docs/: AGENT_VERSIONING_SYSTEM.md  ARCHITECTURE_DETAILED.md  DEMO_SCRIPT.md  DEMO_SCRIPT_PRIORITY.md  DEVELOPMENT_GUIDELINES.md  MCP_CONFIG_EXAMPLE.md  MCP_INTEGRATION_GUIDE.md  MIGRATION_PGLITE.md  README.md  SPECIALIST_TEAMS_INTEGRATION.md  database-migrations.md  mcp-connection-pooling.md
escalation_systems/: __init__.py  escalation_manager.py  escalation_types.py  orchestrator_integration.py  pattern_learner.py  technical_escalation_agent.py  ticket_system.py
evolution-api/: docker-compose.yml
examples/: README.md  agent_versioning_demo.py
genie/: CLAUDE.md  README.md  document_count_analysis.md  meeseeks-army-roadmap.md  pagbank_processing_instructions.md  pg-parameter-migration-epic.md  playground_fixes.md  step4_testing_plan.md  step4_testing_results.md  task1_folder_structure_standardization.md  task3_simplify_to_single_agents.md  task5_simplify_frustration_detection.md  test-file.md  the-great-obliteration.md
hive/: __init__.py  discovery.py
jarvis/: .gitignore  docker-compose-agent.yml  docker-compose-genie.yml  docker-compose.yml  start.bat  start.sh
knowledge/: .content_cache.json  CSV_STRUCTURE_EXPLAINED.md  FILTERING_EXPLAINED.md  MANAGEMENT_GUIDE.md  README_KNOWLEDGE_MANAGEMENT.md  TOKEN_SAVING_STRATEGY.md  agentic_filters.py  csv_hot_reload.py  csv_knowledge_base.py  enhanced_csv_reader.py  hot_reload_manager.py  knowledge_parser.py  knowledge_rag.csv  pagbank_knowledge.csv  simple_example.py  smart_incremental_loader.py
lib/: exceptions.py
logs/: .gitkeep
memory/: memory_config.py  memory_manager.py  pattern_detector.py  session_manager.py
monitoring/: prometheus.yml
my-test-project/: README.md  hive.yaml
nginx/: nginx.conf
orchestrator/: __init__.py  frustration_detector.py  human_handoff_detector.py  integration_patterns.py  main_orchestrator.py  routing_logic.py  text_normalizer.py
pagbank.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
preprocessing/: README.md
qa/: test_containerization.sh
schema/: minimal_tables.sql
scripts/: README.md  _utils.sh  add_noqa_security.py  agent_version_manager.py  agno_db_migrate_v2.py  build_test.py  dev_setup.sh  extract_typification_hierarchy.py  fix_ruff_errors.py  fix_security_violations.py  hive_verify_agentos.py  init-agent-db.sql  init-genie-db.sql  install-predeps.sh  pre-commit-hook.sh  publish.py  purge.sh  remove_hardcoded_emojis.py  run-both.sh  run-development.sh  run-production.sh  set_evolution_env.py  setup_git_hooks.py  setup_postgres.py  start_with_whatsapp.py  (+21 more)
test-workspace/: README-POSTGRES-DATA.md  README.md  docker-compose.yml  pyproject.toml  start.bat
test-workspace/.claude/agents/: genie-clone.md  genie-dev-coder.md  genie-dev-designer.md  genie-qa-tester.md  genie-testing-fixer.md  genie-testing-maker.md
test-workspace/.claude/commands/: clean.md  test.md
test-workspace/genie/ideas/: genie-qa-tester-uvx-enhancement-analysis.md
test-workspace/genie/reports/: genie-qa-tester-uvx-enhancement-complete.md
(+2351 files in other folders)
