[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automagik-hive"
version = "0.1.0"
description = "Automagik Hive Workspace - automagik-hive"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.11",
    "aiofiles>=24.1.0",
    "alembic>=1.16.4",
    "anthropic>=0.64.0",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "mcp>=1.13.0",
    "openai>=1.99.9",
    "pgvector>=0.4.1",
    "psycopg>=3.2.9",
    "psycopg-pool>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "starlette>=0.47.2",
    "uvicorn>=0.35.0",
]

[project.scripts]
automagik-hive = "cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest-asyncio>=1.1.0",
    "psutil>=7.0.0",
    "pytest-mock>=3.14.1",
    "coverage>=7.10.3",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["E501", "S101", "S603", "S607"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
package = true

[tool.setuptools]
packages = ["ai", "api", "cli", "lib", "docker"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.md", "*.csv", "*.json"]
